HtmlUI: fix alignement of key box in table menu

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/button/Button.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/button/Button.css
@@ -71,7 +71,13 @@ button img {
   text-decoration: underline;
 }
 
+.table .button>.key-box {
+  top: 8px;
+}
+
 .button>.key-box {
   position: absolute;
   top: 8px;
 }
+
+
